--- a/views/index.html
+++ b/views/index.html
@@ -16,9 +16,9 @@
   <body>
     <div class="container">
       <h1>Request Header Parser Microservice</h1>
-      <a href="/auth/linkedin" class="btn btn-default">LinkedIn</a>
-      <a href="/auth/github" class="btn btn-default">Github</a>
-      <a href="/auth/twitter" class="btn btn-default">Twitter</a>
+      <a href="/auth/facebook" class="btn btn-primary">Facebook</a>
+      <a href="/auth/github" class="btn btn-primary">Github</a>
+      <a href="/auth/twitter" class="btn btn-primary">Twitter</a>
     </div>
   </body>
 
